@@ -61,6 +61,8 @@ Changes since 2.2.4
 36. modules/socket-module.c: NULL was being returned when accept was
     called with a single argument (Fixes bug reported by Arik
     Mitschang).
+37. src/slwclut.c: A logic error was causing strtrans to function
+    improperly for some UTF-8 encoded strings.
 
 {{{ Previous Versions
 
